* Increase specificity of action bar buttons to avoid unwanted side effects by the toolbar. * Further some spacings were adjusted so that the buttons are centered (vertically & horizontally). * In the global project select, the whole row is now clickable

--- a/frontend/src/app/shared/components/project-list/project-list.component.sass
+++ b/frontend/src/app/shared/components/project-list/project-list.component.sass
@@ -31,6 +31,7 @@
     white-space: nowrap
     overflow: hidden
     max-width: 100%
+    width: 100%
     color: $spot-color-basic-gray-1
 
     &_link:hover
